<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/ll1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_gray_back"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:text="@string/btn_cancel"
            android:padding="8dp"
            android:layout_height="wrap_content" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_confirm"
            android:text="@string/btn_confirm"
            android:padding="8dp"
            android:textColor="@color/blue_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/text_more_than_month"
        android:gravity="center"
        android:id="@+id/tv_switch"
        android:background="@color/color_gray_back"
        android:drawableRight="@drawable/selector_switch_selector"
        android:padding="8dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:orientation="horizontal"
        >
        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/llStart"
            >
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2017.10"
                android:id="@+id/ed_start"
                android:gravity="center"
                android:focusable="false"
                android:layout_gravity="center"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:focusableInTouchMode="false"
                android:hint="@string/text_please_choose_date"
                android:padding="4dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/startView"
                android:background="@color/blue_light"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_to"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="至"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/llEnd"
            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2018.01"
                android:hint="@string/text_please_choose_date"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="4dp"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/ed_end"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/endView"
                android:background="@color/color_edit_hint_9"
                />
        </LinearLayout>
        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/picker_dialog_height">

        <LinearLayout
            android:id="@+id/linear_wheel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/picker_dialog_height"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:orientation="horizontal"
            >

            <com.jzxiang.pickerview.wheel.WheelView
                android:id="@+id/year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"/>


            <com.jzxiang.pickerview.wheel.WheelView
                android:id="@+id/month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"/>


            <com.jzxiang.pickerview.wheel.WheelView
                android:id="@+id/day"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"/>


            <com.jzxiang.pickerview.wheel.WheelView
                android:id="@+id/hour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"/>

            <com.jzxiang.pickerview.wheel.WheelView
                android:id="@+id/minute"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"/>
        </LinearLayout>

    </FrameLayout>

</LinearLayout>
